# native_toolchain_cmake

./: README.md
example/emscripten/: README.md  pubspec.yaml
example/emscripten/hook/: build.dart
example/emscripten/src/: CMakeLists.txt  my_library.c
lib/src/builder/: builder.dart  builder_args.dart  run_builder.dart
lib/src/utils/: add_assets.dart
